--- a/recap/nodejs/recap/section22/views/auth/new-password.ejs
+++ b/recap/nodejs/recap/section22/views/auth/new-password.ejs
@@ -1,7 +1,11 @@
 <%- include("../includes/html-head.ejs") %>
 
 <link rel="stylesheet" href="/css/login_style.css">
-
+<style>
+    main {
+        min-height: auto;
+    }
+</style>
 
 
 
@@ -11,7 +15,7 @@
     <%- include("../includes/index-header.ejs") %>
 
 
-    <main>
+    <main style="height: 50vh; display: flex; justify-content: center; align-items: start; flex-direction: row; text-align: center; padding-top: 2rem;">
         <form class="login-form" action="/new-password" method="POST">
             <div class="form-control">
                 <label for="password">Password</label>
