--- a/recap/nodejs/recap/section22/views/shop/cart.ejs
+++ b/recap/nodejs/recap/section22/views/shop/cart.ejs
@@ -6,6 +6,9 @@
 
 <%- include("../includes/html-start.ejs") %>
 
+    <!-- if there are no items in stock in the cart this will be -1 -->
+    <% const someInStock = products.findIndex(p => p.productId.availability > 1) %>
+
 
     <%- include("../includes/index-header.ejs") %>
     <main id="main">
@@ -17,7 +20,7 @@
                     <section class="main__main__content__row1--cart" aria-label="Shopping cart">
 
                         <div class="main__main__content__row1--cart--header">
-                            <% if (products.length > 0) { %>
+                            <% if (products.length > 0 && someInStock != -1) { %>
                             <h1>Shopping Cart</h1>
                             <a href="#saved_items_area" aria-label="skip the cart and move to next area" class="sr-only">next</a>
 
@@ -36,12 +39,14 @@
                         <% let totalQuantity = 0 %>
                         <% let PaidDeliveryItems = 0 %>
 
-                        <% if (products.length > 0) { %>
+                        <% if (products.length > 0 && someInStock != -1) { %>
                         <ul class="main__main__content__row1--cart--list" aria-label="cart items list">
                             <a href="#cart_proceed_area" aria-label="skip cart items list and go to the proceed area" class="sr-only">proceed</a>
 
                             <% let i = 1 %>
                             <% products.forEach(p => { %>
+                                <% if (p.productId.availability > 0) { %>
+
                                 
                                 <li class="main__main__content__row1--cart--list--item--container" aria-label="cart item <%=i%>">
                                     <label><input type="checkbox" for="item1" aria-label="remove item from checkout"></label>
@@ -54,7 +59,7 @@
                                                 <%=p.productId.title%>
                                             </h2>
                                             <p class="cart--list--item--description--price" aria-label="item's price">
-                                                <span class="globalCurrency"></span> <%=p.productId.price%>
+                                                <span class="globalCurrency"></span> <%=p.productId.price.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",")%>
                                             </p>
                                             <p class="cart--list--item--description--availability 
                                             <%= (p.productId.availability > 0) ? 'available_green' : 'not_available_red' %>"
@@ -104,24 +109,26 @@
                                 <% } else { %>
                                     <% FreeDeliveryEligible = FreeDeliveryEligible + (p.productId.price * p.quantity) %>
                                 <%}%>
+
+                            <%}%>
                             <%})%>
                             <%}%>
 
 
 
                         </ul>
-                        <% if (products.length > 0) { %>
+                        <% if (products.length > 0 && someInStock != -1) { %>
                         <p class="right-text-align row1--extra--proceed-confirm-total" aria-label="Cart's total price">
                             Subtotal (<%=totalQuantity%> items): 
                             <span class="row1--extra--proceed-confirm-total-price"> 
-                                <span class="globalCurrency"></span> <%=totalPrice%>
+                                <span class="globalCurrency"></span> <%=((Math.round(totalPrice*100))/100).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",")%>
                         </span>
                         </p>
                         <%}%>
 
 
                     </section>
-                    <% if (products.length > 0) { %>
+                    <% if (products.length > 0 && someInStock != -1) { %>
                     <section class="main__main__content__row1--extra" id="cart_proceed_area" aria-label="proceed to checkout area">
                         <div class="row1--extra--proceed">
                             <div class="row1--extra--proceed--qualify">
@@ -148,7 +155,7 @@
                             <p class="row1--extra--proceed-confirm-total" aria-label="Cart's total price">
                                 Subtotal (<%=totalQuantity%> items): 
                                 <span class="row1--extra--proceed-confirm-total-price"> 
-                                    <span class="globalCurrency"></span> <%=totalPrice%>
+                                    <span class="globalCurrency"></span> <%=((Math.round(totalPrice*100))/100).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",")%>
                                 </span>
                             </p>
                             <form action="/checkout" method="POST" style="width: 100%; display: flex;">
@@ -161,6 +168,8 @@
                     <%}%>
 
                 </div>
+                
+
                 
                 <section class="main__main__content__row2" aria-label="saved for later area" id="saved_items_area">
 
@@ -177,10 +186,10 @@
                         <ul class="row2--saved-items--container">
                             <li class="saved-item" aria-label="saved item">
                                 <div class="saved-item--image-container" aria-label="saved item's image">
-                                    <img src="/img/product-image.jpg" alt="screen protector">
+                                    <img src="/img/product-image.jpg" alt="Baseball hat">
                                 </div>
                                 <div class="saved-item--description" aria-label="saved item's description area">
-                                    <p href="" class="saved-item--description--title" aria-label="saved item's title">Screen protector</p>
+                                    <p href="" class="saved-item--description--title" aria-label="saved item's title">Baseball hat</p>
                                     <p href="" class="saved-item--description--seller" aria-label="saved item's seller">seller</p>
                                     <p class="saved-item--description--availability not_available_red" aria-label="saved item's availability">currently unavailable</p>
                                     <span class="saved-item--description-controls" aria-label="saved item's control links">
@@ -195,7 +204,7 @@
                                     <img src="/img/product-image.jpg">
                                 </div>
                                 <div class="saved-item--description">
-                                    <a href="" class="saved-item--description--title">Screen protector</a>
+                                    <a href="" class="saved-item--description--title">Baseball hat</a>
                                     <a href="" class="saved-item--description--seller">seller</a>
                                     <span class="saved-item--description--availability not_available_red">currently unavailable</span>
                                     <span class="saved-item--description-controls">
@@ -204,6 +213,27 @@
                                     </span>
                                 </div>
                             </li>
+
+                            <!-- // products out of stock -->
+                            <% products.forEach(p => { %>
+                                <% if (p.productId.availability == 0) { %>
+                            <li class="saved-item">
+                                <div class="saved-item--image-container">
+                                    <img src="<%=p.productId.imageUrl%>" alt="<%=p.productId.title%>">
+                                </div>
+                                <div class="saved-item--description">
+                                    <a href="" class="saved-item--description--title"><%=p.productId.title%></a>
+                                    <a href="" class="saved-item--description--seller"><%=p.productId.seller%></a>
+                                    <span class="saved-item--description--availability not_available_red">currently unavailable</span>
+                                    <span class="saved-item--description-controls">
+                                        <a href="">Delete</a>
+                                        <a href="">Add to list</a>
+                                    </span>
+                                </div>
+                            </li>
+                            <%}%>
+                            <%})%>
+
                         </ul>
 
                     </div>
@@ -215,12 +245,12 @@
                         <ul class="row2--buy-again-items-container" aria-label="previously purchased items list">
                             <li class="buy-again-item" aria-label="previously purchased item">
                                 <div class="buy-again-item--image-container" aria-label="previously bought item's image">
-                                    <img src="/img/product-image.jpg" alt="screen protector">
+                                    <img src="/img/product-image.jpg" alt="Baseball hat">
                                 </div>
                                 <div class="buy-again-item--description" aria-label="previously bought item's description area">
-                                    <p href="" class="buy-again-item--description--title" aria-label="previously bought item's title">Screen protector for Samsung S Ultra</p>
+                                    <p href="" class="buy-again-item--description--title" aria-label="previously bought item's title">Baseball hat</p>
                                     <span class="buy-again-item--description--rating" aria-label="previously bought item's rating">Stars</span>
-                                    <p class="buy-again-item--description--price" aria-label="previously bought item's price"><span class="globalCurrency"></span> 310.00</p>
+                                    <p class="buy-again-item--description--price" aria-label="previously bought item's price"><span class="globalCurrency"></span> 149.00</p>
                                     <p class="buy-again-item--description--only" aria-label="previously bought item's availability">Only 4 left in stock - order soon</p>
                                     <button class="yellow-button buy-again-item--description--button" aria-label="add this previously bought item to cart">Add to Cart</button>
                                 </div>
@@ -231,10 +261,10 @@
                                     <img src="/img/product-image.jpg">
                                 </div>
                                 <div class="recommended-item--description">
-                                    <a href="" class="recommended-item--description--title">Screen protector for Samsung S Ultra</a>
+                                    <a href="" class="recommended-item--description--title">Baseball hat</a>
                                     <span class="recommended-item--description--rating">Stars</span>
-                                    <span class="recommended-item--description--price"><span class="globalCurrency"></span> 310.00</span>
-                                    <span class="recommended-item--description--only">Only 4 left ins stock - order soon</span>
+                                    <span class="recommended-item--description--price"><span class="globalCurrency"></span> 149.00</span>
+                                    <span class="recommended-item--description--only">Only 4 left in stock - order soon</span>
                                     <button class="yellow-button recommended-item--description--button">Add to Cart</button>
                                 </div>
                             </li>
@@ -244,10 +274,10 @@
                                     <img src="/img/product-image.jpg">
                                 </div>
                                 <div class="recommended-item--description">
-                                    <a href="" class="recommended-item--description--title">Screen protector for Samsung S Ultra</a>
+                                    <a href="" class="recommended-item--description--title">Baseball hat</a>
                                     <span class="recommended-item--description--rating">Stars</span>
-                                    <span class="recommended-item--description--price"><span class="globalCurrency"></span> 310.00</span>
-                                    <span class="recommended-item--description--only">Only 4 left ins stock - order soon</span>
+                                    <span class="recommended-item--description--price"><span class="globalCurrency"></span> 149.00</span>
+                                    <span class="recommended-item--description--only">Only 4 left in stock - order soon</span>
                                     <button class="yellow-button recommended-item--description--button">Add to Cart</button>
                                 </div>
                             </li>
@@ -271,9 +301,9 @@
                             <img src="/img/product-image.jpg" alt="screen protector">
                         </div>
                         <div class="recommended-item--description" aria-label="recommended-item's description area">
-                            <p href="" class="recommended-item--description--title" aria-label="recommended-item's title">Screen protector for Samsung S Ultra</p>
+                            <p href="" class="recommended-item--description--title" aria-label="recommended-item's title">Baseball hat</p>
                             <span class="recommended-item--description--rating" aria-label="recommended-item's rating">Stars</span>
-                            <p class="recommended-item--description--price" aria-label="recommended-item's price"><span class="globalCurrency"></span> 310.00</p>
+                            <p class="recommended-item--description--price" aria-label="recommended-item's price"><span class="globalCurrency"></span> 149.00</p>
                             <p class="recommended-item--description--only" aria-label="recommended-item's availability">Only 4 left in stock - order soon</p>
                             <button class="yellow-button recommended-item--description--button" aria-label="add this recommended-item to cart">Add to Cart</button>
                         </div>
@@ -284,10 +314,10 @@
                             <img src="/img/product-image.jpg">
                         </div>
                         <div class="recommended-item--description">
-                            <a href="" class="recommended-item--description--title">Screen protector for Samsung S Ultra</a>
+                            <a href="" class="recommended-item--description--title">Baseball hat</a>
                             <span class="recommended-item--description--rating">Stars</span>
-                            <span class="recommended-item--description--price"><span class="globalCurrency"></span> 310.00</span>
-                            <span class="recommended-item--description--only">Only 4 left ins stock - order soon</span>
+                            <span class="recommended-item--description--price"><span class="globalCurrency"></span> 149.00</span>
+                            <span class="recommended-item--description--only">Only 4 left in stock - order soon</span>
                             <button class="yellow-button recommended-item--description--button">Add to Cart</button>
                         </div>
                     </li>
@@ -297,10 +327,10 @@
                             <img src="/img/product-image.jpg">
                         </div>
                         <div class="recommended-item--description">
-                            <a href="" class="recommended-item--description--title">Screen protector for Samsung S Ultra</a>
+                            <a href="" class="recommended-item--description--title">Baseball hat</a>
                             <span class="recommended-item--description--rating">Stars</span>
-                            <span class="recommended-item--description--price"><span class="globalCurrency"></span> 310.00</span>
-                            <span class="recommended-item--description--only">Only 4 left ins stock - order soon</span>
+                            <span class="recommended-item--description--price"><span class="globalCurrency"></span> 149.00</span>
+                            <span class="recommended-item--description--only">Only 4 left in stock - order soon</span>
                             <button class="yellow-button recommended-item--description--button">Add to Cart</button>
                         </div>
                     </li>
