--- a/recap/nodejs/recap/section22/public/css/footer_style.css
+++ b/recap/nodejs/recap/section22/public/css/footer_style.css
@@ -173,6 +173,7 @@ footer {
 .main-footer__content-signin a {
     text-decoration: none;
     color: white;
+    font-weight: 700;
 }
 
 /*///////////////////////////////////////////////////////////////*/
@@ -327,7 +328,7 @@ footer {
     }
     
     .main-footer__content-signin {
-        display: none;
+        /* display: none; */
     }
 
     .main-footer__content-links2-list-item1 .select-caret-down {
