--- a/recap/nodejs/recap/section22/views/auth/reset.ejs
+++ b/recap/nodejs/recap/section22/views/auth/reset.ejs
@@ -1,7 +1,11 @@
 <%- include("../includes/html-head.ejs") %>
 
 <link rel="stylesheet" href="/css/login_style.css">
-
+<style>
+    main {
+        min-height: auto;
+    }
+</style>
 
 
 
@@ -10,12 +14,12 @@
 
     <%- include("../includes/index-header.ejs") %>
 
-    <main>
+    <main style="height: 50vh; display: flex; justify-content: center; align-items: start; flex-direction: row; text-align: center; padding-top: 2rem;">
         <form class="login-form" action="/reset" method="POST">
-            <div class="form-control">
+            <span class="form-control">
                 <label for="emal">E-Mail</label>
                 <input type="email" name="email" id="title">
-            </div>
+            </span>
 
             <input type="hidden" name="_csrf" value="<%=csrfToken%>">
             <button class="btn" type="submit">Reset Password</button>
