--- a/recap/nodejs/recap/section22/views/shop/checkout.ejs
+++ b/recap/nodejs/recap/section22/views/shop/checkout.ejs
@@ -8,22 +8,27 @@
 
 
     <%- include("../includes/index-header.ejs") %>
-    <main id="main">
+    <main id="main" style="height: 85vh; display: flex; justify-content: start; align-items: center; flex-direction: column; text-align: center;">
 
         <% products.forEach(p => { %>
-            <li class="cart__item">
+            <li class="cart__item" style="margin-top: 1rem;">
                 <h1><%= p.productId.title %></h1>
                 <h2>Quantity: <%= p.quantity %></h2>
             </li>
         <% }) %>
 
-        <div class="centered">
-            <h2>Total: <%= totalSum %></h2>
+        <div style="margin-top: 3rem;">
+            <h2>Total: <%= totalSum.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></h2>
         </div>
 
 
         <div class="centered">
-            <button id="order-btn" class="btn">ORDER</button>
+            <button id="order-btn" class="btn yellow-button" style="font-size: 1rem; padding: 0.5rem 2rem; border-radius: 99px; margin-top: 1rem;">Proceed to payment</button>
+            <div style="margin-top: 1rem; gap: 0.5rem; display: flex; flex-direction: column;">
+                <p>*kindly use this testing card number : 4242 4242 4242 4242</p>
+                <p>and fill the remaining inputs with any information</p>
+            </div>
+            
             <script src="https://js.stripe.com/v3/"></script>
             <script>
                 // This is your test publishable API key.
