--- a/recap/nodejs/recap/section22/public/css/cart_style.css
+++ b/recap/nodejs/recap/section22/public/css/cart_style.css
@@ -114,7 +114,7 @@ img {
     /* border: 1px solid red; */
     width: 100%;
     /* gap: 1rem; */
-    gap: 0.5rem;
+    gap: 1rem;
     padding-bottom: 1rem;
     border-bottom: 1px solid var(--cart_bg);
 }
@@ -122,7 +122,20 @@ img {
 
 .cart--list--item--image {
     /* height: 100%; */
-    height: 100px;
+    /* height: 100px; */
+    /* min-width: 40%; */
+    min-width: 75px;
+    min-height: 75px;
+
+    object-fit: cover;
+
+    overflow: hidden;
+    border: 0.25em solid rgb(246, 246, 246);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: auto;
 }
 
 .cart--list--item--description {
@@ -368,8 +381,21 @@ img {
     /* padding: 0.5rem; */
 }
 .saved-item--image-container {
-    width: 40%;
-    max-width: 220px;
+    
+    min-width: 20vw;
+    max-width: 20vw;
+    height: 20vw;
+    max-height: 20vw;
+    object-fit: cover;
+    padding: 0.5rem;
+
+    overflow: hidden;
+    /* border: 0.25em solid rgb(246, 246, 246); */
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: auto;
 
 }
 
@@ -380,8 +406,9 @@ img {
 .saved-item--description {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.25rem;
     justify-content: center;
+    padding: 0.5rem;
 }
 
 
@@ -390,6 +417,11 @@ img {
     color: black;
     font-weight: 500;
     font-size: 1.1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .saved-item--description--seller {
@@ -520,6 +552,18 @@ img {
 
 
 
+@media screen and (max-width: 550px) {
+
+    .cart--list--item--image {
+        max-width: 20vw;
+        min-width: 20vw;
+        height: 20vw;
+        max-height: 20vw;
+    }
+
+
+}
+
 @media screen and (min-width: 550px) {
 
     .main__main__content {
@@ -544,13 +588,26 @@ img {
     }
 
     .cart--list--item--image {
-        height: 20vw;
-        max-height: 180px;
+        /* height: 20vw; */
+        /* max-height: 180px; */
+
+        /* height: 22vh;
+        width: 50%;
+        max-width: min(22vh,190px);
+        max-height: 190px; */
+        /* height: 100%; */
+        min-width: 100px;
+        min-height: 100px;
+        height: 10vw;
+        width: 10vw;
+        max-height: 190px;
+        max-width: 190px;
+        
     }
 
     .cart--list--item--image img {
-        height: 100%;
-        max-height: 180px;
+        /* height: 100%; */
+        /* max-height: 180px; */
     }
 
     .cart--list--item--description--name, .cart--list--item--description--price {
@@ -601,6 +658,7 @@ img {
 
     .row2--saved-items--container {
         flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .row2--buy-again-items--container {
@@ -611,6 +669,8 @@ img {
         flex-direction: column;
         width: auto;
         gap: 0;
+        max-width: 190px;
+        width: 32.3%;
     }
 
     .saved-item--description {
@@ -627,12 +687,22 @@ img {
 
     .saved-item--image-container {
         width: 100%;
-        max-width: 220px;
-        max-height: 220px;
+        max-width: 100%;
+        /* max-height: 150px; */
+        max-height: 10px;
+        min-height: 150px;
+        min-width: 100%;
+        /* padding: 1rem; */
+
     }
     .saved-item--image-container img{
         margin-top: 0;
-        width: 100%;
+        /* width: 100%; */
+        height: 100%;
+        /* max-width: 100%; */
+        /* min-height: 100%; */
+        object-fit: cover;
+        width: auto;
 
     }
 
