--- a/projects/section10-SQL/public/css/main.css
+++ b/projects/section10-SQL/public/css/main.css
@@ -159,6 +159,11 @@ form {
 
 .card__image {
   width: 100%;
+  max-height: 240px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .card__image img {
