--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -736,12 +736,16 @@ html.hide_scroll_dark::-webkit-scrollbar-thumb {
     flex-direction: row;
     min-width: 100%;
     gap: 0.5rem;
-    padding: 0 5px;
+    padding: 0 2rem;
+    margin-top: 0.25rem;
   }
   
   .search_allProperties-buttons button {
-    flex: 1;
-    margin: 0;
+    /* flex: 1; */
+    width: 50%;
+    /* margin: 0; */
+    height: 1.5rem;
+
   }
 }
 /*//////////////////////////////////////////////////////////*/
